[package]
name = "async_relm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
relm4-components = "0.1.0-beta.9"

[dependencies.gtk]
version = "0.2"
package = "gtk4"

[dependencies.relm4]
version = "0.1.0-beta.9"
features = ["tokio-rt"]

[dependencies.tokio]
version = "1.0"
features = ["full"]
